--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,12 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
+    "paths": {
+      "svg-donught": [
+        "dist/svg-donught/svg-donught",
+        "dist/svg-donught"
+      ]
+    },
     "lib": [
       "es2020",
       "dom"
@@ -27,6 +33,7 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictPropertyInitialization": false
   }
 }
