Changed the url of homepage npm registry

--- a/projects/svg-donught/package.json
+++ b/projects/svg-donught/package.json
@@ -10,7 +10,7 @@
   "bugs": {
     "url": "https://github.com/entanglesoftware-angular/svg-donught/issues"
   },
-  "homepage": "https://github.com/entanglesoftware-angular/svg-donught",
+  "homepage": "https://entanglesoftware-angular.github.io/svg-donught/",
   "keywords": [
     "angular",
     "svg",
