--- a/projects/svg-donught/package.json
+++ b/projects/svg-donught/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svg-donught",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A lightweight library for donught making using svg. Most fascinating about this library is it is much more responsive than you think as it is pure html. :)",
   "author": "Entangle Software Private Limited (entanglesoftware@gmail.com, tech@entanglesoftware.com)",
   "repository": {
@@ -22,10 +22,10 @@
   ],
   "license": "MIT",
   "peerDependencies": {
-    "@angular/common": "^13.3.0",
-    "@angular/core": "^13.3.0"
+    "@angular/common": "^15.0.4",
+    "@angular/core": "^15.0.4"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "2.4.1"
   }
 }
